[gd_scene load_steps=11 format=2]

[ext_resource path="res://textures/bread/trader/bread_trader1.png" type="Texture" id=1]
[ext_resource path="res://textures/bread/trader/bread_trader2.png" type="Texture" id=2]
[ext_resource path="res://new_theme.tres" type="Theme" id=3]
[ext_resource path="res://dogicapixel.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://game/BreadTrader.gd" type="Script" id=5]
[ext_resource path="res://game/talking.gd" type="Script" id=6]
[ext_resource path="res://audio/trader.wav" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=2]

[node name="BreadTrader" type="Area2D" groups=["npc"]]
collision_layer = 0
collision_mask = 0
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -10 )
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 1 )
playing = true

[node name="Dialogue" type="Label" parent="."]
margin_left = -42.0
margin_top = -77.0
margin_right = 58.0
margin_bottom = -22.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "I can turn those feathers of yours into parts for your watergun! 
(dont ask how)"
autowrap = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -10 )
shape = SubResource( 2 )

[node name="talking" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
bus = "SFX"
script = ExtResource( 6 )

[connection signal="entered_breadtrader" from="." to="talking" method="_on_BreadTrader_entered_breadtrader"]
[connection signal="exited_breadtrader" from="." to="talking" method="_on_BreadTrader_exited_breadtrader"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_Hitbox_area_exited"]
